# raven

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  Makefile  Makefile.toml  README.md  RELEASING.md
.claude/: settings.json
.claude/workflows/: global-index-read-render.js  svelte-port.js
.github/workflows/: build.yml  check-contract-wasm.yml
common/: Cargo.toml
common/src/: inbox.rs  lib.rs  post.rs  signed_op.rs  thread.rs  web_container.rs
contracts/facade/: Cargo.toml  freenet.toml
contracts/facade-loader/src/: index.html.tmpl
contracts/facade-types/: Cargo.toml
contracts/facade-types/src/: lib.rs
contracts/facade/src/: lib.rs
contracts/follows/: Cargo.toml
contracts/follows/src/: lib.rs
contracts/global-index-shard/: Cargo.toml  initial_state.json
contracts/global-index-shard/src/: lib.rs
contracts/inbox-shard/: Cargo.toml  initial_state.json
contracts/inbox-shard/src/: lib.rs
contracts/likes/: Cargo.toml
contracts/likes/src/: lib.rs
contracts/posts/: Cargo.toml
contracts/posts/src/: lib.rs
contracts/thread-shard/: Cargo.toml  initial_state.json
contracts/thread-shard/src/: lib.rs
contracts/user-shard/: Cargo.toml
contracts/user-shard/src/: lib.rs
delegates/identity/: Cargo.toml
delegates/identity/src/: lib.rs
docs/adr/: 0001-contract-sharding-architecture.md  0001-implementation-notes.md
published-contract/: README.md  contract-id.txt  facade-id.txt  facade.wasm  web_container_contract.wasm  webapp.parameters
scripts/: build-facade-snapshot-linux.sh  build-loader.sh  check-facade-byte-equal.sh  generate-production-key.sh  mirror-shard-wasm.sh  node-e2e.sh  release.sh  smoke-test-production.sh
test-contract/: web-container-keys.toml
tools/web-container-sign/: Cargo.toml
tools/web-container-sign/src/: main.rs
tools/web-container-sign/tests/: facade_integration.rs
web/: freenet.toml  index.html  model_code_hash.txt  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
web/branding/: app.json
web/container/: Cargo.toml
web/container/src/: lib.rs
web/src/: App.svelte  app.ts  branding.ts  freenet-api.test.ts  freenet-api.ts  identity.ts  index.ts  main.ts  shard-key.test.ts  shard-key.ts  types.ts  vite-env.d.ts
web/src/components/: ComposeModal.svelte  Explore.svelte  Feed.svelte  KeyExportModal.svelte  LandingFeed.svelte  Notifications.svelte  OnboardingOverlay.svelte  PostCard.svelte  Profile.svelte  RightPanel.svelte  Settings.svelte  Sidebar.svelte  Thread.svelte  compose-box.ts  compose-modal.ts  explore.ts  feed.ts  notifications.ts  onboarding.ts  post-card.ts  profile.ts  repost-menu.ts  right-panel.ts  settings.ts  sidebar.ts  thread.ts  view-types.ts
web/src/migrations/: candidates.test.ts  candidates.ts  legacy-hashes.test.ts  legacy-hashes.ts  run.test.ts  run.ts  state-store.test.ts  state-store.ts
web/src/scss/: _compose-modal.scss  _dark-mode.scss  _explore.scss  _feed.scss  _layout.scss  _notif.scss  _onboarding.scss  _raven.scss  _reset.scss  _responsive.scss  _right-panel.scss  _settings.scss  _sidebar.scss  _thread.scss  styles.scss
web/src/stores/: freenet.ts
web/tests/: compose-modal-dark.spec.ts  package-lock.json  package.json  playwright.config.ts  playwright.node.config.ts  production-liveness.spec.ts
web/tests/node-e2e/: live-node.spec.ts  production-liveness.spec.ts
