[workspace]
resolver = "2"
members = ["common", "contracts/*", "delegates/*", "web/container", "tools/web-container-sign"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 's'
debug = false
codegen-units = 1
panic = 'abort'

[workspace.dependencies]
# Pinned exact (=x.y.z) for contract build isolation: a freenet-stdlib bump
# rotates contract WASM hashes, so it must be deliberate and paired with the
# migration story. See AGENTS.md → "Contract migration".
freenet-stdlib = { version = "=0.6.1", default-features = false, features = ["contract"] }
freenet-microblogging-common = { path = "common" }
