[workspace]
resolver = "2"
members = ["common", "contracts/*", "delegates/*", "web/container", "tools/web-container-sign"]
# The facade crates (issue #45) are INTENTIONALLY outside the workspace so
# workspace lockfile churn cannot rotate the facade contract's wasm bytes — its
# whole purpose is a stable contract id across releases. They carry their own
# Cargo.lock and pin every wasm-affecting dep with `=x.y.z`. The `contracts/*`
# glob above would otherwise pull them in, so exclude them explicitly.
exclude = ["contracts/facade", "contracts/facade-types", "contracts/facade-loader"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 's'
debug = false
codegen-units = 1
panic = 'abort'

[workspace.dependencies]
# Pinned exact (=x.y.z) for contract build isolation: a freenet-stdlib bump
# rotates contract WASM hashes, so it must be deliberate and paired with the
# migration story. See AGENTS.md → "Contract migration".
freenet-stdlib = { version = "=0.6.1", default-features = false, features = ["contract"] }
freenet-microblogging-common = { path = "common" }
