[package]
name = "freenet-microblogging-facade"
version = "0.0.1"
edition = "2024"
license = "LGPL-3.0-or-later"
publish = false

# Issue #45. The facade contract MUST stay byte-deterministic across releases —
# its whole reason to exist is a stable contract id. A stable id means stable
# bookmarks; rotating it breaks every user's saved URL.
#
# This crate is INTENTIONALLY OUTSIDE the freenet-microblogging workspace
# (`exclude` in the root Cargo.toml). It carries its own Cargo.lock so workspace
# dep churn does NOT re-resolve facade transitive deps and rotate the wasm.
#
# All deps are pinned with `=` so cargo cannot pick a higher semver-compatible
# release. Bumping any of these is a deliberate act paired with regenerating the
# published facade snapshot and the published facade-id (which breaks every
# existing bookmark). Do not loosen these pins without that conversation.

[dependencies]
byteorder = "=1.5.0"
ciborium = "=0.2.2"
ed25519-dalek = { version = "=2.1.1", default-features = false, features = ["alloc", "serde"] }
freenet-stdlib = { version = "=0.6.1", default-features = false, features = ["contract"] }
freenet-microblogging-facade-types = { path = "../facade-types" }

[dev-dependencies]
ed25519-dalek = { version = "=2.1.1", features = ["rand_core"] }
rand = { version = "=0.8.5", features = ["std_rng", "getrandom"] }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["freenet-main-contract"]
contract = ["freenet-stdlib/contract"]
freenet-main-contract = []
trace = ["freenet-stdlib/trace"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "=0.8.5"

# Mirror the workspace-root release profile EXACTLY. The facade builds in its
# own workspace, so these settings are not inherited — if they drift from the
# root profile the cross-workspace builds produce different bytes for identical
# source, rotating the stable contract id. Keep in sync with root Cargo.toml.
[profile.release]
lto = true
opt-level = 's'
debug = false
codegen-units = 1
panic = "abort"
