[package]
name = "freenet-microblogging-likes"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
resolver = "2"
publish = false

# Build isolation: WASM-affecting deps pinned to exact versions (=x.y.z).
# See AGENTS.md → "Contract migration".
[dependencies]
freenet-stdlib = { workspace = true, features = ["contract"] }
serde = "=1.0.228"
serde_json = "=1.0.149"

[lib]
crate-type = ["cdylib"]

[features]
default = ["freenet-main-contract"]
freenet-main-contract = []
