[package]
name = "freenet-microblogging-identity"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
resolver = "2"
publish = false

# Build isolation: WASM-affecting deps pinned to exact versions (=x.y.z).
# See AGENTS.md → "Contract migration".
[dependencies]
freenet-stdlib = { workspace = true }
ed25519-dalek = { version = "=2.2.0", features = ["rand_core"] }
hex = "=0.4.3"
rand_core = "=0.6.4"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"

[lib]
crate-type = ["cdylib"]

[features]
default = ["freenet-main-delegate"]
freenet-main-delegate = []
