[package]
name = "freenet-microblogging-identity"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
resolver = "2"
publish = false

# Build isolation: WASM-affecting deps pinned to exact versions (=x.y.z).
# See AGENTS.md → "Contract migration".
[dependencies]
freenet-stdlib = { workspace = true }
freenet-microblogging-common = { workspace = true }
# ML-DSA-65 (FIPS 204, NIST level 3) — post-quantum signatures, matching
# freenet/freenet-email. Pinned exact for WASM build isolation.
ml-dsa = { version = "=0.1.0-rc.8", default-features = false, features = ["alloc"] }
hex = "=0.4.3"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"

[lib]
crate-type = ["cdylib"]

[features]
default = ["freenet-main-delegate"]
freenet-main-delegate = []
