[package]
name = "web-container-sign"
version = "0.1.0"
edition = "2024"
publish = false
description = "Sign a compressed webapp for the freenet-microblogging web-container contract"

[[bin]]
name = "web-container-sign"
path = "src/main.rs"

[dependencies]
freenet-microblogging-common = { workspace = true }
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["alloc", "serde", "rand_core", "pem", "std"] }
ciborium = "0.2.2"
rand = { version = "0.8.5", features = ["std", "std_rng"] }
clap = { version = "4.5", features = ["derive"] }
bs58 = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
